CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(dataprocess)
SET(DP_LIB_SRC ./dataprocess_factory.cpp
                ./display_dataprocess.cpp
                ./spanningtree_dataprocess.cpp)

IF (CMAKE_BUILD_TYPE STREQUAL Debug)
    ADD_DEFINITIONS(-D_DEBUG_ON_)
ENDIF()

FIND_PACKAGE(PkgConfig)
PKG_CHECK_MODULES(EIGEN REQUIRED eigen3)

INCLUDE_DIRECTORIES(${EIGEN_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/..)
SET(CMAKE_CXX_FLAGS_DEBUG -g)

ADD_LIBRARY(${PROJECT_NAME} STATIC ${DP_LIB_SRC})

