CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(datareader_unit_test)
SET(DP_UNIT_TEST_SRC ./main.cpp
                ./default_datareader_test.cpp
                ../default_datareader.cpp
                ../datareader_factory.cpp)

IF (CMAKE_BUILD_TYPE STREQUAL Debug)
    ADD_DEFINITIONS(-D_DEBUG_ON_)
ENDIF()

FIND_PACKAGE(PkgConfig)
PKG_CHECK_MODULES(EIGEN REQUIRED eigen3)
PKG_CHECK_MODULES(CPPUNIT REQUIRED cppunit)

INCLUDE_DIRECTORIES(${EIGEN_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${CPPUNIT_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/..)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../..)
LINK_DIRECTORIES(${CPPUNIT_LIBRARY_DIRS})
SET(CMAKE_CXX_FLAGS_DEBUG -g)

ADD_EXECUTABLE(${PROJECT_NAME} ${DP_UNIT_TEST_SRC})

#Settings for test
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${CPPUNIT_LIBRARIES})

